Added starter components and pages

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,13 +4,32 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
+  line-height: 1.6;
+  font-size: 18px;
 }
 
 * {
   box-sizing: border-box;
+}
+
+a {
+  color: pink;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+.Fredoka {
+  font-family: "Fredoka One", sans-serif;
+}
+
+.Poppins {
+  font-family: "Poppins", sans-serif;
 }
