--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,3 +30,16 @@ img {
 .signup_form::-webkit-scrollbar {
   display: none;
 }
+
+.spinnerIcon {
+  animation: spinnericon 0.7s linear infinite;
+}
+
+@keyframes spinnericon {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
