--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,11 +23,7 @@ img {
   font-family: "Poppins", sans-serif;
 }
 
-.feed::-webkit-scrollbar {
-  display: none;
-}
-
-.signup_form::-webkit-scrollbar {
+.hideScrollbar::-webkit-scrollbar {
   display: none;
 }
 
