Created update profile modal

--- a/pages/user/accountPage.module.css
+++ b/pages/user/accountPage.module.css
@@ -2,6 +2,14 @@
   padding-top: 1.2rem;
 }
 
+.followButton {
+  right: 1rem;
+}
+
+.smallUsername {
+  font-size: 0.2rem;
+}
+
 /* .coverPhoto{
     border-bottom-left-radius: "lg";
     border-bottom-right-radius: "lg";
@@ -10,5 +18,10 @@
 @media only screen and (max-width: 600px) {
   .header {
     padding-top: 0;
+  }
+
+  .followButton {
+    top: -4rem;
+    right: 0.6rem;
   }
 }
