--- a/components/PostPanel/postpanel.module.css
+++ b/components/PostPanel/postpanel.module.css
@@ -3,24 +3,10 @@
   background-color: rgb(210, 210, 210);
 }
 
-.modalContainer {
-  -webkit-overflow-scrolling: touch;
-  animation-name: slidein;
-  animation-duration: 0.27s;
-  animation-timing-function: ease-in-out;
-  color: blue;
-}
-
-.modalSlideOut {
-  animation-name: slideout;
-  animation-duration: 0.27s;
-  animation-timing-function: ease-in-out;
-}
-
 .slidein {
   animation-name: slidein;
-  animation-duration: 0.3s;
-  animation-timing-function: ease-in-out;
+  animation-duration: 0.16s;
+  animation-timing-function: ease-out;
   top: 60px;
 }
 
@@ -46,4 +32,14 @@
   to {
     top: 100%;
   }
+}
+
+.blackOverlay {
+  background-color: rgb(0, 0, 0, 1);
+  transition-duration: 1s;
+}
+
+.smoothTransition {
+  transition-duration: 1s;
+  background-color: rgb(0, 0, 0, 1);
 }
