--- a/components/PostPanel/postpanel.module.css
+++ b/components/PostPanel/postpanel.module.css
@@ -35,11 +35,26 @@
 }
 
 .blackOverlay {
-  background-color: rgb(0, 0, 0, 1);
+  background-color: rgb(0, 0, 0, 0);
   transition-duration: 1s;
 }
 
 .smoothTransition {
   transition-duration: 1s;
+  animation-name: blackoverlay;
+  animation-duration: 0.3s;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
   background-color: rgb(0, 0, 0, 1);
+}
+
+@keyframes blackoverlay {
+  from {
+    opacity: 0.5;
+    background-color: rgb(0, 0, 0, 0);
+  }
+  to {
+    background-color: rgb(0, 0, 0, 0.5);
+    opacity: 1;
+  }
 }
