--- a/pages/user/accountPage.module.css
+++ b/pages/user/accountPage.module.css
@@ -1,5 +1,6 @@
 .header {
-  padding-top: 1.2rem;
+  /* padding-top: 1.2rem; */
+  margin-top: 1.2rem;
 }
 
 .followButton {
@@ -15,9 +16,14 @@
   min-width: 600px;
 }
 
+.backButton {
+  color: black;
+}
+
 @media only screen and (max-width: 600px) {
   .header {
-    padding-top: 0;
+    /* padding-top: 0; */
+    margin-top: 0rem;
   }
 
   .followButton {
@@ -32,5 +38,9 @@
 
   .tabs {
     min-width: 300px;
+  }
+
+  .backButton {
+    color: white;
   }
 }
